--- a/index.html
+++ b/index.html
@@ -2,9 +2,40 @@
 <html>
 <head>
   <title>CI/CD App</title>
+  <style>
+    body {
+      background: linear-gradient(to right, #4facfe, #00f2fe);
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+      margin: 0;
+    }
+    h1 {
+      color: #ffeb3b;
+      font-size: 3em;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+    }
+    p {
+      color: #f8f8f8;
+      font-size: 1.3em;
+      margin-top: 20px;
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+    }
+    .container {
+      background: rgba(0, 0, 0, 0.4);
+      border-radius: 15px;
+      padding: 30px;
+      display: inline-block;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
 <body>
-  <h1> Hello from my CI/CD pipeline!!!!</h1>
-  <p>Thia CI/CD pipeline page is deployed automatically using GitHub Actions → AWS EC2....</p>
+  <div class="container">
+    <h1>Hello from my CI/CD pipeline!!!!</h1>
+    <p>This CI/CD pipeline page is deployed automatically using GitHub Actions → AWS EC2....</p>
+  </div>
 </body>
 </html>
+
